# cpp_logger

./: CMakeLists.txt  library.json
src/: .gitkeep  ArduinoLogSink.h  DesktopLogSink.h  ILogBuffer.h  ILogSink.h  ILogger.h  LogBuffer.h  LogLevel.h  Logger.h  Tag.h
